implementations/rust/ockam/ockam/tests/node/std/fail_if_function_is_not_named_main.stderr
error: the function name must be `main`
 --> tests/node/std/fail_if_function_is_not_named_main.rs:2:4
  |
2 | fn foo(c: ockam::Context) {
  |    ^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/node/std/fail_if_function_is_not_named_main.rs:4:2
  |
4 | }
  |  ^ consider adding a `main` function to `$DIR/tests/node/std/fail_if_function_is_not_named_main.rs`
