implementations/rust/ockam/ockam/tests/node/std/fail_if_function_is_not_named_main.rs
#[ockam::node]
fn foo(c: ockam::Context) {
    c.stop().await.unwrap();
}
